--- a/Vocable/Supporting Files/en.lproj/InfoPlist.strings
+++ b/Vocable/Supporting Files/en.lproj/InfoPlist.strings
@@ -7,4 +7,4 @@
 */
 
 /* Camera usage description */
-NSCameraUsageDescription = "Vocable uses ARKit head tracking to detect the user's face as seen in the device's TrueDepth front camera feed for the purpose of controlling an on-screen pointer, allowing users with limited mobility to interact with the app. Head orientation and position data is used expressly for controlling the on-screen pointer. That head tracking data is not stored or transmitted in any way. Vocable needs permission to use the camera for this purpose.";
+NSCameraUsageDescription = "Vocable uses ARKit, a head tracking tool that relies on your device's TrueDepth front camera to detect mininal changes in head orientation and position. This allows users with limited mobility to control an on-screen pointer to interact with app. Camera data is used expressly for controlling the on-screen pointer. This data is not stored or transmitted in any way. Vocable needs permission to use the camera for this purpose.";
