--- a/Vocable/Supporting Files/en.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/en.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 "category_editor.toast.changes_saved.title" = "Changes saved";
 
 /* Debugging error message for when preloaded content is not found */
+/* This seems to not be used currently */
 "debug.assertion.presets_file_not_found" = "No presets found";
 
 /* Cancel alert action title */
